# python_benchmark

./: .gitignore  README.md  new_benchmark.sh  pyproject.toml  run.sh
benchmarks/: dataclass_vs_manual_init_benchmark.py  direct_call_vs_service_layer_benchmark.py  json_vs_pydantic_validation_benchmark.py  property_benchmark.py
